update all commands so that they derive from AbstractCommand class